--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
     "ra-data-json-server": "^5.13.6",
+    "ra-i18n-polyglot": "^5.13.6",
+    "ra-language-english": "^5.13.6",
+    "ra-language-french": "^5.13.6",
+    "ra-language-romanian": "^1.0.2",
+    "ra-language-spanish": "^1.0.0",
     "react": "^19.0.0",
     "react-admin": "^5.13.0",
     "react-dom": "^19.0.0",
