--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.1",
     "@mui/material": "^7.0.1",
-    "ra-data-json-server": "^5.13.6",
+    "ra-data-nestjsx-crud": "^1.3.2",
     "ra-i18n-polyglot": "^5.13.6",
     "ra-language-english": "^5.13.6",
     "ra-language-french": "^5.13.6",
