--- a/docker/docker-compose.prod.yml
+++ b/docker/docker-compose.prod.yml
@@ -2,17 +2,10 @@
 services:
   
   app:
-    image: node:latest
     container_name: ${COMPOSE_PROJECT_NAME}_app
-    working_dir: ${COMPOSE_WORKING_DIR}
-    command: sleep infinity
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
-      - "3033:3000"
-    environment:
-      TZ: UTC
-      WORKING_DIR: ${COMPOSE_WORKING_DIR}
-      USER_ID: ${USER_ID}
-      WATCHPACK_POLLING: "true"
-    volumes:
-      - ./../:${COMPOSE_WORKING_DIR}:rw,delegated
-
+      - "4543:443"
+      - "8085:80"
