--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -9,6 +9,11 @@ jobs:
     runs-on: [self-hosted]
 
     steps:
+    - name: Set up Node.js
+      uses: actions/setup-node@v3
+      with:
+        node-version: '25'
+    
     - name: Checkout code
       uses: actions/checkout@v3
 
@@ -21,7 +26,7 @@ jobs:
         ssh-keyscan -H "${{ secrets.SSH_HOST }}" > ~/.ssh/known_hosts        
 
         echo "Uploading files to the server..."
-        apt update && apt install -y openssh-client rsync nodejs npm
+        apt update && apt install -y openssh-client rsync
         npm install
         
         touch .env
